//
//  ScannerLidarAppMain.swift
//  LiDAR_APP
//
//  Created by Bartosz Grelewski on 19/11/2023.
//

import SwiftUI

@main
struct ScannerLidarAppMain: App {
    var body: some Scene {
        WindowGroup {
            NavigationStack {
                WelcomeView()
            }
        }
    }
}
